[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game Objects/Actors/Player/GUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/LightIndicatorBG.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/LightIndicator.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/healthbar_outline.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/healthbar.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/staminabar_outline.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/staminabar.png" type="Texture" id=7]

[node name="GUI" type="Control"]
anchor_right = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = 27.5959
margin_bottom = 19.2335
script = ExtResource( 1 )

[node name="LightIndicator" type="Node2D" parent="."]
position = Vector2( 32, 32 )
scale = Vector2( 2, 2 )

[node name="LightIndicatorBG" type="Sprite" parent="LightIndicator"]
texture = ExtResource( 2 )
offset = Vector2( 16, 16 )

[node name="LightIndicator" type="Sprite" parent="LightIndicator"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 16, 16 )
z_index = 1
texture = ExtResource( 3 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = 90.0
margin_top = 32.0
margin_right = 2138.0
margin_bottom = 40.0
rect_scale = Vector2( 5, 4 )
value = 100.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="StamBar" type="TextureProgress" parent="."]
margin_left = 90.0
margin_top = 64.0
margin_right = 2138.0
margin_bottom = 72.0
rect_scale = Vector2( 5, 4 )
value = 100.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
